add log in, log out btn, fix filter 50%

--- a/app/cart/cart.html
+++ b/app/cart/cart.html
@@ -1,4 +1,4 @@
-<div class="cartWrapper">
+<div class="cartWrapper" ng-hide="$ctrl.hide">
     <a href="#!/cart">
         <button class="btn btn-primary" type="button">
             Your cart: <span class="glyphicon glyphicon-shopping-cart"></span><span
