--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <script src="bower_components/angular-animate/angular-animate.js"></script>
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-cookie/angular-cookies.min.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
     <script src="app.animations.js"></script>
@@ -27,6 +28,10 @@
     <script src="cart/cart.component.js"></script>
     <script src="cart-list/cart-list.module.js"></script>
     <script src="cart-list/cart-list.component.js"></script>
+    <script src="login/login.module.js"></script>
+    <script src="login/login.component.js"></script>
+    <script src="logout/logout.module.js"></script>
+    <script src="logout/logout.component.js"></script>
   </head>
   <body>
     <header>
