--- a/app/phone-list/phone-list.template.html
+++ b/app/phone-list/phone-list.template.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
+    <div class="col-sm-2">
       <!--Sidebar content-->
-
       <p>
         Search:
         <input ng-model="$ctrl.query" />
@@ -17,11 +16,18 @@
       </p>
 
     </div>
-    <div class="col-md-10">
+    <div class="col-sm-2 col-sm-offset-8">
+      <logout></logout>
+    </div>
+
+
+  </div>
+  <div class="row">
+    <div class="col-sm-12">
       <!--Body content-->
 
       <ul class="phones">
-        <li ng-repeat="phone in $ctrl.phones | filter:$ctrl.query | orderBy:$ctrl.orderProp"
+        <li ng-repeat="phone in $ctrl.phones | filter: {'name' : $ctrl.query} | orderBy:$ctrl.orderProp"
             class="thumbnail phone-list-item">
           <a href="#!/phones/{{phone.id}}" class="thumb">
             <img ng-src="{{phone.imageUrl}}" alt="{{phone.name}}" />
